# rpg-progress-ocr-logger

./: .env.example  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
docs/: ethical-boundary.md  sample-data-policy.md
examples/: progress_log.csv
fixtures/: sample_ocr_response.json
src/rpg_progress_ocr_logger/: __init__.py  audit.py  cli.py  env.py  inventory_export.py  inventory_scanner.py  models.py  parser.py  profile.py  quantity_reader.py  sheets_export.py  upstage_client.py
tests/: test_inventory_export.py  test_inventory_scanner.py  test_parser.py  test_profile.py  test_quantity_reader.py
