[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-progress-ocr-logger"
version = "0.1.0"
description = "Read-only OCR progress logger prototype for manually captured RPG result screens."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rpg-progress-ocr-logger = "rpg_progress_ocr_logger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
